# AlgorithmTrader

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  okxapi_doc.md  pyproject.toml
.github/workflows/: README.md  ci.yml
apps/common/: config_loader.py
config/: README.md  alerts.yml  backtests.json  data_collection.yml  loki.yml  monitoring.yml  promtail.yml  risk_management.yml  strategies.json  strategy.yml
config/grafana/provisioning/datasources/: datasources.yml
data/: README.md
docs/: KNOWN_LIMITATIONS.md  Overall.md  README.md  STRUCTURE.md  self_strategy_prompt.md  user_guide.md  vibe_rule.md
docs/dev_guideline/: config_management.md  crypto_mvp_development.md  folders_overview.md  init_checklist.md  metrics_and_logging.md  ops_runbook_core.md  phase_1_setup.md  phase_2_data_collection.md  phase_3_visualization.md  phase_4_strategy.md  phase_5_monitoring.md
docs/development/: architecture.md  init_GPT5.2Thinking.md  init_requirement.md  phase1&2_web_optimization.md  tushare_a_share_integration.md  tushare_a_share_vibe_coding.md
docs/guides/: data_collection.md  deployment.md  faq.md  strategy_development.md  user_guide.md  web_ui.md
docs/templates/: backtest_config_template.json  strategy_config_template.json  strategy_design_template.md
docs/tutorials/: first_strategy.md  quickstart.md
infra/: README.md
infra/grafana/: README.md
infra/grafana/dashboards/: README.md  backtest-results.json  data-monitor.json  risk-monitor.json  trading-monitor.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/grafana/provisioning/datasources/: datasources.yaml
infra/influxdb/: README.md
infra/loki/: loki-config.yaml
infra/promtail/: promtail-config.yaml
scripts/: backfill_a_share.py  create_github_issues.sh  data_query.py  demo_backtest.py  demo_collect.py  fetch_history.py  import_historical_data.py  realtime_collector.py  realtime_sync.py  run_btc_backtest.py  run_first_backtest.py  smoke_test.py  test_collector.py  test_influx_store.py  test_okx_connector.py  test_parquet_store.py  test_quality.py
services/: __init__.py
services/backtest_runner/: __init__.py  main.py
services/collector/: __init__.py  main.py
services/notifier/: __init__.py  main.py
services/scheduler/: __init__.py  main.py
services/trader/: __init__.py  main.py
services/web/: __init__.py  backtest_manager.py  download_tasks.py  main.py  parquet_cache.py  service_monitor.py  state.py  strategy_config.py  utils.py
services/web/api/: __init__.py  backtests.py  optimization.py  strategies.py  system.py
services/web/components/: __init__.py  param_editor.py  status_card.py  strategy_table.py
services/web/pages/: __init__.py  a_share.py  backtests.py  dashboard.py  data.py  notifications.py  optimization.py  settings.py  strategies.py
src/: __init__.py
src/backtest/: __init__.py  a_share_rules.py  engine.py  metrics.py  reports.py
src/core/: __init__.py  clock.py  events.py  instruments.py  timeframes.py  typing.py
src/core/config/: __init__.py  settings.py
src/data/: __init__.py
src/data/connectors/: __init__.py  binance.py  ibkr.py  okx.py  tushare.py
src/data/fetcher/: __init__.py  checkpoint.py  history.py  manager.py  realtime.py  tushare_history.py
src/data/pipelines/: __init__.py
src/data/quality/: __init__.py  validators.py
src/data/storage/: a_share_store.py  influx_store.py  parquet_store.py
src/data/store/: __init__.py  influx_store.py  parquet_store.py
src/execution/: __init__.py  broker_base.py  order_manager.py  slippage_fee.py
src/execution/adapters/: __init__.py  ibkr.py  okx_spot.py  okx_swap.py
src/features/: __init__.py  a_share_factors.py  feature_engine.py
src/features/factor_library/: __init__.py
src/ops/: __init__.py  healthcheck.py  heartbeat.py  logging.py  notify.py  scheduler.py  watchdog.py
src/optimization/: __init__.py  engine.py  methods.py  objectives.py  walk_forward.py
src/portfolio/: __init__.py  accounting.py  allocator.py  position.py
src/risk/: __init__.py  engine.py  rules.py
src/strategy/: __init__.py  base.py  registry.py
src/strategy/examples/: __init__.py  mean_reversion.py  trend_following.py
tests/: README.md
tests/integration/: __init__.py  test_data_fetcher_integration.py
tests/unit/: __init__.py  test_backtest_engine.py  test_broker_base.py  test_clock.py  test_data_fetcher.py  test_example_strategies.py  test_healthcheck.py  test_metrics.py  test_notifier.py  test_notifier_service.py  test_okx_swap.py  test_optimization.py  test_order_manager.py  test_portfolio.py  test_reports.py  test_risk_engine.py  test_scheduler.py  test_scheduler_service.py  test_slippage_fee.py  test_strategy_base.py  test_strategy_config.py  test_web_state.py
